using UnityEngine;

namespace Enemys
{
    public class BossEnemy : MonoBehaviour, ITrapable
    {
        public void Boot()
        {
            
        }
    }
}