using UnityEngine;

namespace Enemys
{
    public class EnemyManager : MonoBehaviour
    {
        
    }
}