namespace Enemys
{
    public interface Iattackable
    {
        
    }
}