using UnityEngine;

namespace Enemys
{
    public class MobEnemy : MonoBehaviour
    {
    }
}