using UnityEngine;

namespace GameManagers
{
    public class InGameManager : MonoBehaviour
    {
        private void Start()
        {
        }

        private void Update()
        {
        }
    }
}