using UnityEngine;

namespace Character
{
    public class LockOn : MonoBehaviour
    {
        
    }
}