using UnityEngine;

namespace Character
{
    public class PlayerRobotManager : MonoBehaviour
    {
        
    }
}