@startuml


namespace GameManagers{
    class GameSceneManager
    class InGameManager
}

namespace uitls{
MoveOnSpline o-- SpeedChanger
    class MoveOnSpline
    class SpeedChanger{
         - speed
    }
}
namespace Enemys{
    
    EnemyManager -- MobEnemy
    EnemyManager -- BossEnemy
    
    interface IAttackable
    interface ITrapable
    
    class EnemyManager
    class Detector
    
    class MobEnemy
    class BossEnemy

    BossEnemy ..|> IAttackable
    BossEnemy ..|> ITrapable
    MobEnemy ..|> IAttackable
    MobEnemy ..|> ITrapable

}

namespace PlayerRobots{
    PlayerRobotManager o-- PlayerAttackerComponent
    PlayerRobotManager o-- LockOn
    PlayerRobotManager o-- ButtonAnimationManager
    
    class PlayerRobotManager 
    class PlayerAttackerComponent
    class LockOn
    class ButtonAnimationManager
    class CollisionNotificatorToEnemy
}

GameManagers.GameSceneManager o- GameManagers.InGameManager
PlayerRobots.CollisionNotificatorToEnemy -o  Enemys.Detector
Enemys.Detector ---o Enemys.ITrapable
GameManagers.InGameManager o- PlayerRobots.PlayerRobotManager



@enduml